Terraform-lab1/4-internet-gateway.tf
# internet gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
        Name = "${var.customer}-${var.env_name}-igw"
  }
}
