Terraform-lab1/3-route-table.tf
# private route table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = {
        Name = "${var.customer}-${var.env_name}-private-rt"
  }
}

# public-internet route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
        Name = "${var.customer}-${var.env_name}-public-rt"
  }
}

# private-nat route table
resource "aws_route_table" "private_nat" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.main.id
  }

  tags = {
        Name = "${var.customer}-${var.env_name}-pivate-nat-rt"
  }
}


# subnet association
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.private1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private2" {
  subnet_id      = aws_subnet.private2.id
  route_table_id = aws_route_table.private.id
}
